# Huffman-Archiver

./: CMakeLists.txt  README.md  unit_testing.cpp
engine/: huffman_engine.hpp  huffman_engine_archiver.cpp  huffman_engine_bitset.cpp  huffman_engine_tree.cpp
file_handler/: archiver_lib_handler.cpp  archiver_lib_handler.hpp
testing/: huffman_testing.cpp  huffman_testing_aux.cpp  huffman_testing_aux.hpp
testing/tests/: test_bad_code.in  test_bad_size.in  test_bad_table.in
utility/: archiver_app.cpp  archiver_utility.cpp  main.cpp
